Update cmems url from http to https

--- a/cmems/data_access/motu/motu-client.ini
+++ b/cmems/data_access/motu/motu-client.ini
@@ -3,7 +3,7 @@
 #user=  
 #pwd=
 
-motu=http://nrt.cmems-du.eu/motu-web/Motu  
+motu=https://nrt.cmems-du.eu/motu-web/Motu  
 service_id=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS 
 product_id=global-analysis-forecast-wav-001-027
 date_min=2020-12-01 
