--- a/Isochrone/requirements.txt
+++ b/Isochrone/requirements.txt
@@ -3,11 +3,11 @@ cartopy
 geovectorslib
 global_land_mask
 matplotlib
-numpy
+numpy == 1.23.4
 pandas
 pytest
 python-dotenv
-PIL
-scipy
+Pillow
+scipy == 1.9.2
 setuptools
 xarray
