modified dockerfile and added logger to app.py

--- a/data/OpenSeaMap/python_docker/Dockerfile
+++ b/data/OpenSeaMap/python_docker/Dockerfile
@@ -31,8 +31,8 @@ RUN if [ ! -f /tmp/data.osm ]; then \
 
 COPY . . 
 
-COPY app/ /app
+#COPY app/ /app
 
 
-CMD ["python", "./app.py"]
+CMD ["python", "./app/app.py"]
 
