--- a/data/OpenSeaMap/python_docker/.env
+++ b/data/OpenSeaMap/python_docker/.env
@@ -1,12 +1,12 @@
 GEOSERVER_URL=http://localhost:8080/geoserver
 GEO_USERNAME=admin
 GEO_PASSWORD=geoserver
-POSTGIS_HOST= localhost
+POSTGIS_HOST= localhost #Use ip-address
 POSTGIS_HOST_DB=db
-POSTGIS_PORT=5432
-POSTGIS_DATABASE=geoserver
-POSTGIS_USER=geonode
-POSTGIS_PASSWORD=geonode-password
+POSTGIS_PORT=5434
+POSTGIS_DATABASE=mydatabase
+POSTGIS_USER=myuser
+POSTGIS_PASSWORD=mypassword
 POSTGIS_DBTYPE=postgis
 POSTGIS_SCHEMA=public
 POSTGIS_VALIDATE_CONNECTIONS=true
