added classes for seamarkCheck and landPolygonCheck in constraints

--- a/data/OpenSeaMap/python_docker/.env
+++ b/data/OpenSeaMap/python_docker/.env
@@ -11,3 +11,8 @@ POSTGIS_DBTYPE=postgis
 POSTGIS_SCHEMA=public
 POSTGIS_VALIDATE_CONNECTIONS=true
 POSTGIS_MAX_CONNECTIONS=100
+
+HOST="localhost"
+PASSWORD="abc"
+USER=
+DATABASE=
