--- a/.github/workflows/weather_routing_tool.yaml
+++ b/.github/workflows/weather_routing_tool.yaml
@@ -25,16 +25,30 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          cd WeatherRoutingTool
-          python -m pip install --upgrade pip
-          pip install pytest
+          # install dependencies required by cartopy
           apt-get update && apt-get -y install libproj-dev proj-data proj-bin libgeos-dev
+          python -m pip install --upgrade pip
+          cd WeatherRoutingTool
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with Black
-        uses: psf/black@stable
-        with:
-          options: "--check --line-length 120 --verbose --diff"
-          src: "WeatherRoutingTool/WeatherRoutingTool"
+      - name: Install flake8
+        run: pip install flake8
+      - name: Run flake8
+        run: |
+          flake8 --max-line-length=120 WeatherRoutingTool
+        # uses: suo/flake8-github-action@releases/v1
+        # with:
+        #   # NOTE: this needs to be the same as the job name
+        #   checkName: 'lint'
+      # - name: Lint with Black
+      #   #uses: psf/black@stable
+      #   # available black versions: 23.1.0 -> 23.3.0 -> 23.7.0 <- latest
+      #   uses: psf/black@23.3.0
+      #   with:
+      #     options: "--check --line-length 120 --verbose --diff"
+      #     src: "WeatherRoutingTool/WeatherRoutingTool"
+      # - name: Install pytest
+      #   run: |
+      #     pip install pytest
       # - name: Test with pytest
       #   run: |
       #     pytest WeatherRoutingTool/tests/
