--- a/.github/workflows/weather_routing_tool.yaml
+++ b/.github/workflows/weather_routing_tool.yaml
@@ -29,12 +29,15 @@ jobs:
           apt-get update && apt-get -y install libproj-dev proj-data proj-bin libgeos-dev
           python -m pip install --upgrade pip
           cd WeatherRoutingTool
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Install flake8
-        run: pip install flake8
-      - name: Run flake8
+          if [ -f requirements.test.txt ]; then pip install -r requirements.test.txt; fi
+      #- name: Install flake8
+      #  run: pip install flake8
+#      - name: Run flake8
+#        run: |
+#          flake8 --max-line-length=120 WeatherRoutingTool
+      - name: Run pytest
         run: |
-          flake8 --max-line-length=120 WeatherRoutingTool
+          pytest WeatherRoutingTool/tests
         # uses: suo/flake8-github-action@releases/v1
         # with:
         #   # NOTE: this needs to be the same as the job name
