--- a/.github/workflows/weather_routing_tool.yaml
+++ b/.github/workflows/weather_routing_tool.yaml
@@ -35,14 +35,16 @@ jobs:
           cd WeatherRoutingTool
           if [ -f requirements.test.txt ]; then pip install -r requirements.test.txt; fi
           pip install git+https://github.com/52North/MariGeoRoute#subdirectory=data/maridatadownloader
-      #- name: Install flake8
-      #  run: pip install flake8
-#      - name: Run flake8
-#        run: |
-#          flake8 --max-line-length=120 WeatherRoutingTool
-      - name: Run pytest
+      - name: Install flake8
+        run: pip install flake8
+      - name: Run flake8
         run: |
-          pytest WeatherRoutingTool/tests
+          flake8 --max-line-length=120 \
+          --exclude RunGenetic.py,Optimize.py,GeneticUtils.py,Genetic.py,DataUtils.py \
+          --extend-ignore F401,F403,F405 WeatherRoutingTool \
+      #- name: Run pytest
+      #  run: |
+      #    pytest WeatherRoutingTool/tests
         # uses: suo/flake8-github-action@releases/v1
         # with:
         #   # NOTE: this needs to be the same as the job name
