--- a/.github/workflows/weather_routing_tool.yaml
+++ b/.github/workflows/weather_routing_tool.yaml
@@ -18,7 +18,7 @@ jobs:
       BASE_PATH: '${{ github.workspace }}/WeatherRoutingTool'
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: [ "3.9" ]
         #python-version: ["3.9", "3.10", "3.11"]
 
     steps:
@@ -39,12 +39,17 @@ jobs:
         run: pip install flake8
       - name: Run flake8
         run: |
-          flake8 --max-line-length=120 \
-          --exclude RunGenetic.py,Optimize.py,GeneticUtils.py,Genetic.py,DataUtils.py \
-          --extend-ignore F401,F403,F405 WeatherRoutingTool \
-      #- name: Run pytest
-      #  run: |
-      #    pytest WeatherRoutingTool/tests
+          flake8 --max-line-length=120  \
+          --exclude WeatherRoutingTool/WeatherRoutingTool/algorithms/RunGenetic.py,\
+          WeatherRoutingTool/WeatherRoutingTool/algorithms/Optimize.py,\
+          WeatherRoutingTool/WeatherRoutingTool/algorithms/GeneticUtils.py,\
+          WeatherRoutingTool/WeatherRoutingTool/algorithms/Genetic.py,\
+          WeatherRoutingTool/WeatherRoutingTool/algorithms/DataUtils.py,\
+          WeatherRoutingTool/WeatherRoutingTool/additional_code,WeatherRoutingTool/build \
+          --extend-ignore F401,F403,F405 WeatherRoutingTool/
+        #- name: Run pytest
+        #  run: |
+        #    pytest WeatherRoutingTool/tests
         # uses: suo/flake8-github-action@releases/v1
         # with:
         #   # NOTE: this needs to be the same as the job name
