--- a/.github/workflows/openseamap.yaml
+++ b/.github/workflows/openseamap.yaml
@@ -43,4 +43,4 @@ jobs:
         with:
           context: ./data/OpenSeaMap/docker
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}"
+          tags: ${{ steps.meta.outputs.tags }}
