Add max retries to OpenSeaMap docker setup

--- a/data/OpenSeaMap/docker/Dockerfile
+++ b/data/OpenSeaMap/docker/Dockerfile
@@ -14,6 +14,7 @@ ENV POSTGRES_DB=
 ENV POSTGRES_SCHEMA=
 ENV POSTGRES_USER=
 ENV POSTGRES_PASSWORD=
+ENV MAX_RETRIES=15
 
 ENV SEAMARKS_FILE=/tmp/world.osm
 ENV SEAMARKS_URL=https://tiles.openseamap.org/seamark/world.osm
