--- a/.github/workflows/weather_routing_tool.yaml
+++ b/.github/workflows/weather_routing_tool.yaml
@@ -37,7 +37,7 @@ jobs:
           cd WeatherRoutingTool
           if [ -f requirements.test.txt ]; then pip install -r requirements.test.txt; fi
           pip install git+https://github.com/52North/MariGeoRoute#subdirectory=data/maridatadownloader
-          pip install git+https://${GH_USER}:${GH_TOKEN}@collaborating.tuhh.de/ces1314/maripower
+          pip install git+https://${GH_USER}:${GH_TOKEN}@collaborating.tuhh.de/ces1314/maripower.git
       - name: Install flake8
         run: pip install flake8
       - name: Run flake8
@@ -50,9 +50,9 @@ jobs:
           WeatherRoutingTool/WeatherRoutingTool/algorithms/DataUtils.py,\
           WeatherRoutingTool/WeatherRoutingTool/additional_code,WeatherRoutingTool/build \
           --extend-ignore F401,F403,F405,E711 WeatherRoutingTool/
-        #- name: Run pytest
-        #  run: |
-        #    pytest WeatherRoutingTool/tests
+      - name: Run pytest
+        run: |
+          pytest WeatherRoutingTool/tests
         # uses: suo/flake8-github-action@releases/v1
         # with:
         #   # NOTE: this needs to be the same as the job name
