reactivate github actions

--- a/.github/workflows/weather_routing_tool.yaml
+++ b/.github/workflows/weather_routing_tool.yaml
@@ -1,12 +1,19 @@
 name: Weather Routing Tool Workflow
 
 on:
-  # push:
-  #   branches:
-  #     - 'MakeWRTImportable'
-  #   paths:
-  #     - 'WeatherRoutingTool/**'
-  workflow_dispatch:
+   push:
+     branches:
+       - 'main'
+     paths:
+       - 'WeatherRoutingTool/**'
+
+   pull:
+     branches:
+       - 'main'
+     paths:
+       - 'WeatherRoutingTool/**'
+
+workflow_dispatch:
 
 jobs:
   lint:
